--- a/views/index.html
+++ b/views/index.html
@@ -83,9 +83,9 @@
 </div>
 <script>
   {% autoescape false %}
-  var hotels = {{ templateHotels | json }};
-  var restaurants = {{ templateRestaurants | json }};
-  var activities = {{ templateActivities | json }};
+  // var hotels = {{ templateHotels | json }};
+  //var restaurants = {{ templateRestaurants | json }};
+  //var activities = {{ templateActivities | json }};
   {% endautoescape %}
 </script>
 {% endblock %}
